--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,26 +1,26 @@
 # Set this website's info
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
-url: "https://coffeebank.github.io"
-baseurl: "/moonrise"
+url: "https://den1rap.github.io"
+baseurl: "/rsfy"
 siteIcon: /media/android-chrome-192x192.png
-siteYear: 2020
+siteYear: 2022
 siteFooterlink: /about
 showinSearchEngines: true
 # googleAnalyticsID: (uncomment to use)
 
 
 # Set basic server info
-serverName: Moonrise MC
+serverName: RSFY
 serverDescription: A Minecraft server where we have lots of fun!
-serverIP: 31.41.59.26:5358
+serverIP: java.rsfy.com.ua
 useBedrockForOnlineStatus: false
 
 
 # Discord information
-discordInvite: https://discord.gg/minecraft
-discordServerID: 299881420891881473
-discordChannelID: 450428756855750666
+discordInvite: https://discord.gg/umHYz6uFPe
+discordServerID: 962036561002766377
+discordChannelID: 964585249378037821
 
 
 # # Navbar Links at the top of the page (uncomment "siteNav" to use)
